changed banners and some more changes

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,7 +1,18 @@
-<div id="category-show-page-banner" class="card-category">
-    <div id="category-show-title-words"> 
-      <%= @category.title %>
-    </div>
+<%# <div id="category-show-page-banner" class="card-category">
+    <div id="category-show-title-words">
+        <%= image_tag("dashboard-3.jpeg", class: "card-img", style: "margin-top:20px; min-height: 220px ") %>
+        <%# <%= @category.title %>
+      <%# </div> %>
+
+  <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
+    <%= image_tag("dashboard-3.jpeg", class: "card-img", style: "margin-top:40px; min-height: 60px ") %>
+
+   <p
+    style="position: absolute; left: 50%; top: 100px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 24px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px; text-align: center"
+  ><%= @category.title %></p>
+  </div>
+</div>
+
 </div>
 <div
   class="container d-flex justify-content-between"
