--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,5 +1,13 @@
-<div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+<%# <div id="category-show-page-banner"class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
     <h2>Favorites</h2>
+</div> %>
+  <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
+    <%= image_tag("dashboard-3.jpeg", class: "card-img", style: "margin-top:40px; min-height: 60px ") %>
+
+   <p
+    style="position: absolute; left: 50%; top: 115px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 31px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;"
+  >Favorites</p>
+  </div>
 </div>
 <div id="category-page-main">
   <div class="container" style="margin-top: 20px">
@@ -14,7 +22,7 @@
           <div class="suggestion-cards-info">
             <h5
                 class="card-title"
-                style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
+                style="padding-top: 15px; font-weight: 700; padding-bottom: 5px; "
               ><%= suggestion.title %></h5>
             <div>
               <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
