finally finsihed datepicker

--- a/app/assets/stylesheets/pages/_profile_page.scss
+++ b/app/assets/stylesheets/pages/_profile_page.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap');
 
 
-#profile-container-with-avatar {
+#profile-image {
   padding-top: 90px;
   padding-bottom: 65px;
 }
