--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,18 +1,5 @@
-<%# <div id="category-show-page-banner" class="card-category">
-    <div id="category-show-title-words">
-        <%= image_tag("dashboard-3.jpeg", class: "card-img", style: "margin-top:20px; min-height: 220px ") %>
-        <%# <%= @category.title %>
-      <%# </div> %>
-
-  <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
-    <%= image_tag("dashboard-3.jpeg", class: "card-img", style: "margin-top:40px; min-height: 60px ") %>
-
-   <p
-    style="position: absolute; left: 50%; top: 100px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 24px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px; text-align: center"
-  ><%= @category.title %></p>
-  </div>
-</div>
-
+<div id="category-show-page-banner"class="card-category" style="font-size: 26px; background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+  <%= @category.title %>
 </div>
 <div
   class="container d-flex justify-content-between"
@@ -39,46 +26,41 @@
 </div>
 <hr>
 <div id="category-page-main">
-  <div class="container" style="margin-top: 20px">
-    <% @suggestions.each do |suggestion| %>
-      <%= link_to suggestion_path(suggestion), class: 'text-decoration-none text-dark' do %>
-        <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
-          <% if suggestion.images.present? %>
-            <%= image_tag(suggestion.images[0], class: "card-img-top", style: "max-height: 250px; object-fit: cover") %>
+  <%= render 'suggestions/list' %>
+</div>
+<script>
+  const categoryPage = document.querySelector('#category-page-main')
 
-          <% else %>
-            <%= image_tag("https://source.unsplash.com/random/?date", class: "card-img-top") %>
-          <% end %>
-          <div class="suggestion-cards-info">
-            <h5
-                class="card-title"
-                style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
-              ><%= suggestion.title %></h5>
-            <div>
-              <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
-                <%= suggestion.city %>
-                &nbsp;
-                <%= suggestion.sub_category %>
-                &nbsp;
-                <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
-                  <%= suggestion.rating %></i>
-              </p>
-            </div>
-          </div>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
-  <script>
-    document.addEventListener("DOMContentLoaded", function(event) {
-      document.getElementById("amsterdam-btn").click();
-  });
+  const amsterdamButton = document.querySelector('#amsterdam-btn')
+  amsterdamButton.addEventListener('click', (event) => {
+    const referrerUrl = document.referrer.split('/')
 
-    const amsterdamButton = document.getElementById('amsterdam-btn')
-    amsterdamButton.addEventListener('Click', (event) => {
-      console.log('hello')
+    fetch(`${referrerUrl[4]}?filter=Amsterdam`, {headers: {"Accept": "text/plain"}})
+    .then(response => response.text())
+    .then((data) => {
+      categoryPage.outerHTML = data
     })
+  })
 
-    const rotterdamButton = document.querySelector('#rotterdam-btn')
-    const theHagueButton = document.querySelector('#the-hague-btn')
-  </script>
+  const rotterdamButton = document.querySelector('#rotterdam-btn')
+  rotterdamButton.addEventListener('click', (event) => {
+    const referrerUrl = document.referrer.split('/')
+
+    fetch(`${referrerUrl[4]}?filter=Rotterdam`, {headers: {"Accept": "text/plain"}})
+    .then(response => response.text())
+    .then((data) => {
+      categoryPage.outerHTML = data
+    })
+  })
+
+  const theHagueButton = document.querySelector('#the-hague-btn')
+  theHagueButton.addEventListener('click', (event) => {
+    const referrerUrl = document.referrer.split('/')
+
+    fetch(`${referrerUrl[4]}?filter=TheHague`, {headers: {"Accept": "text/plain"}})
+    .then(response => response.text())
+    .then((data) => {
+      categoryPage.outerHTML = data
+    })
+  })
+</script>
