--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -1,6 +1,4 @@
-
 <div class="container" style="margin-top: 70px">
-
   <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
     <% if @suggestion.images.empty? %>
       <%= image_tag("https://source.unsplash.com/random/?date", class: "card-img-top") %>
@@ -36,25 +34,6 @@
         </button>
       </div>
     <% end %>
-
-
-
-    <div style='height: 0px'>
-      <% if current_user %>
-        <% if current_user.favorites.where(suggestion: @suggestion).empty? %>
-          <%= simple_form_for [@suggestion, @favorite] do |f| %>
-            <input type="hidden" id="referrer" name="referrer" value="show" />
-            <%= f.button :button do %>
-              <i id="heart" class="fa-regular fa-heart fa-xl"></i>
-            <% end %>
-          <% end %>
-        <% else %>
-          <%= link_to favorite_path(current_user.favorites.where(suggestion: @suggestion).first), data: {turbo_method: :delete} do %>
-            <i id="heart" class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i>
-          <% end %>
-        <% end %>
-      <% end %>
-    </div>
   </div>
 
   <div class="card mb-3 suggestion-cards" style='overflow: hidden'>
@@ -71,107 +50,122 @@
       </div>
     </div>
   </div>
-<div>
 
-</div>
-<div class="card mb-3 suggestion-cards" style='overflow: hidden;'>
-  <div class="suggestion-cards-info">
-    <h5
-        class="card-title"
-        style="padding-top: 18px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px;"
-      ><%= @suggestion.title %></h5>
-    <div>
-      <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
-        <%= @suggestion.city %>
-        &nbsp;
-        <%= @suggestion.sub_category %>
-        &nbsp;
-        <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
-          <%= @suggestion.rating %></i>
-        <p class="pt-0 pb-0 mb-0">Description:</p>
-        <p>
-          <% if @suggestion.overview.length > 180 %>
-             <%= @suggestion.overview[0..180] %> ...
-          <% else %>
-             <%= @suggestion.overview %>
+  <div class="container card mb-3 suggestion-cards" style='overflow: hidden;'>
+    <div class="suggestion-cards-info">
+      <div class="d-flex justify-content-between">
+        <div class="w-30">
+          <h5
+            class="card-title"
+            style="padding-top: 18px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px;"
+          ><%= @suggestion.title %></h5>
+        </div>
+
+        <div class="mt-4" style='height: 0px'>
+          <% if current_user %>
+            <% if current_user.favorites.where(suggestion: @suggestion).empty? %>
+              <%= simple_form_for [@suggestion, @favorite] do |f| %>
+                <input type="hidden" id="referrer" name="referrer" value="show" />
+                <%= f.button :button do %>
+                  <i id="heart" class="fa-regular fa-heart fa-xl"></i>
+                <% end %>
+              <% end %>
+            <% else %>
+              <%= link_to favorite_path(current_user.favorites.where(suggestion: @suggestion).first), data: {turbo_method: :delete} do %>
+                <i id="heart" class="fa-solid fa-heart love fa-2xl" style="color: #db3333;"></i>
+              <% end %>
+            <% end %>
           <% end %>
+        </div>
+      </div>
+
+      <div>
+        <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
+          <%= @suggestion.city %>
+          &nbsp;
+          <%= @suggestion.sub_category %>
+          &nbsp;
+          <i class="fa-solid fa-star" style="color: #992944; font-size: 14px">
+            <%= @suggestion.rating %></i>
+          <p>
+            <% if @suggestion.overview.length > 180 %>
+              <%= @suggestion.overview[0..180] %> ...
+            <% else %>
+              <%= @suggestion.overview %>
+            <% end %>
+          </p>
         </p>
-    </p>
+      </div>
+    </div>
   </div>
-</div>
-</div>
-<div class="card mb-3 suggestion-cards" style='overflow: hidden; margin-top:20px;'>
-  <div class="suggestion-cards-info">
-    <h5 class="card-title"
+  <div class="container card mb-3 suggestion-cards" style='overflow: hidden; margin-top:20px;'>
+    <div class="suggestion-cards-info">
+      <h5 class="card-title"
               style="padding-top: 18px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
             >Location</h5>
-    <p> Address: <span id="address"> </span> </p>
-    <div style="min-height:250px; margin-bottom:5px; z-index:0;">
-      <div
+      <p><span id="address"> </span> </p>
+      <div style="min-height:250px; margin-bottom:5px; z-index:0;">
+        <div
                 id="map"
                 style="position: relative; top: 15; width: 100%; min-height: 200px;"
               >
-        <span
+          <span
                   class="d-none"
                   id="coordinates"
                   data-longitude="<%= @suggestion.longitude %>"
                   data-latitude="<%= @suggestion.latitude %>"
                 ></span>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<script>
- const coordinates = document.getElementById('coordinates');
-    const addressElement = document.getElementById('address');
+  <script>
+    const coordinates = document.getElementById('coordinates');
+       const addressElement = document.getElementById('address');
 
-  accessToken = 'pk.eyJ1IjoicHJhY2hpMjUiLCJhIjoiY2xtM3Q1N2lyNDY0bTNxdGh1eG1vMW94MCJ9.eRtL5A5z0SDvt0ViEDskCw';
+     accessToken = 'pk.eyJ1IjoicHJhY2hpMjUiLCJhIjoiY2xtM3Q1N2lyNDY0bTNxdGh1eG1vMW94MCJ9.eRtL5A5z0SDvt0ViEDskCw';
 
-  mapboxgl.accessToken = accessToken;
-  console.log(coordinates.dataset.longitude)
-  const map = new mapboxgl.Map({
-    container: 'map',
-    // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
-    style: 'mapbox://styles/mapbox/streets-v12',
-    center: [coordinates.dataset.longitude, coordinates.dataset.latitude],
-    zoom: 15,
-  });
+     mapboxgl.accessToken = accessToken;
+     console.log(coordinates.dataset.longitude)
+     const map = new mapboxgl.Map({
+       container: 'map',
+       // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
+       style: 'mapbox://styles/mapbox/streets-v12',
+       center: [coordinates.dataset.longitude, coordinates.dataset.latitude],
+       zoom: 15,
+     });
 
-  map.addControl(
-    new mapboxgl.GeolocateControl({
-    positionOptions: {
-    enableHighAccuracy: true
-    },
-    // When active the map will receive updates to the device's location as it changes.
-    trackUserLocation: true,
-    // Draw an arrow next to the location dot to indicate which direction the device is heading.
-    showUserHeading: true
-    })
-  );
+     map.addControl(
+       new mapboxgl.GeolocateControl({
+       positionOptions: {
+       enableHighAccuracy: true
+       },
+       // When active the map will receive updates to the device's location as it changes.
+       trackUserLocation: true,
+       // Draw an arrow next to the location dot to indicate which direction the device is heading.
+       showUserHeading: true
+       })
+     );
 
-  new mapboxgl.Marker()
-  .setLngLat([coordinates.dataset.longitude, coordinates.dataset.latitude])
-  .addTo(map);
+     new mapboxgl.Marker()
+     .setLngLat([coordinates.dataset.longitude, coordinates.dataset.latitude])
+     .addTo(map);
 
-  const apiUrl = `https://api.mapbox.com/geocoding/v5/mapbox.places/${coordinates.dataset.longitude},${coordinates.dataset.latitude}.json?access_token=${accessToken}`;
-    // Make a GET request to the API
-  fetch(apiUrl)
-    .then(response => response.json())
-    .then(data => {
-      if (data.features && data.features.length > 0) {
-          const firstFeature = data.features[0];
-          const address = firstFeature.place_name;
-          addressElement.textContent = address;
-      } else {
-          addressElement.textContent = 'Address not found';
-      }
-  })
-  .catch(error => {
-      console.error('Error fetching address:', error);
-      addressElement.textContent = 'Error fetching address';
-  });
-
-   const carousel = new bootstrap.Carousel('#myCarousel', {
-    interval: 1000
-  })
-</script>
+     const apiUrl = `https://api.mapbox.com/geocoding/v5/mapbox.places/${coordinates.dataset.longitude},${coordinates.dataset.latitude}.json?access_token=${accessToken}`;
+       // Make a GET request to the API
+     fetch(apiUrl)
+       .then(response => response.json())
+       .then(data => {
+         if (data.features && data.features.length > 0) {
+             const firstFeature = data.features[0];
+             const address = firstFeature.place_name;
+             addressElement.textContent = address;
+         } else {
+             addressElement.textContent = 'Address not found';
+         }
+     })
+     .catch(error => {
+         console.error('Error fetching address:', error);
+         addressElement.textContent = 'Error fetching address';
+     });
+  </script>
