--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -49,6 +49,7 @@
             <div class="btn btn-ghost" >
               <%= link_to "Cancel my account", edit_user_registration_path, data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %>
             </div>
+              <%= link_to 'logout', destroy_user_session_path, data: { turbo_method: :delete }%>
           </div>
         </div>
       </div>
