--- a/app/assets/stylesheets/components/_suggestion_cards.scss
+++ b/app/assets/stylesheets/components/_suggestion_cards.scss
@@ -85,7 +85,7 @@
 }
 
  .suggestion-banner{
-    background-image: asset-url('dashboard.jpeg');
+    background-image: asset-url('dashboard.jpg');
     background-position: top;
      background-size: cover;
      width: 100%;
