--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -18,7 +18,7 @@
 <div class="cover">
 
   <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
-    <%= image_tag("dashboard-3.jpeg", class: "card-img", style: "margin-top:40px; min-height: 215px ") %>
+    <%= image_tag("dashboard-3.jpg", class: "card-img", style: "margin-top:40px; min-height: 215px ") %>
   <!--  <div class="gradient-overlay"></div> -->
     <p style="position: absolute; left: 50%; top: 120px; transform: translate(-50%); z-index: 1000; font-weight: 400; font-size: 16px; font-style: italic; color: beige; letter-spacing: 1px;"
 >Good things are coming.. </p>
