--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -123,11 +123,12 @@
       </div>
     </div>
   </div>
+  <span id="mapbox-api" class="d-none"><%= ENV['MAPBOX_API_KEY'] %></span>
   <script>
     const coordinates = document.getElementById('coordinates');
        const addressElement = document.getElementById('address');
 
-     accessToken = 'pk.eyJ1IjoicHJhY2hpMjUiLCJhIjoiY2xtM3Q1N2lyNDY0bTNxdGh1eG1vMW94MCJ9.eRtL5A5z0SDvt0ViEDskCw';
+     const accessToken = document.querySelector('#mapbox-api').innerText;
 
      mapboxgl.accessToken = accessToken;
      console.log(coordinates.dataset.longitude)
