finished favorite button and simple form styling

--- a/app/assets/stylesheets/pages/_suggestion.scss
+++ b/app/assets/stylesheets/pages/_suggestion.scss
@@ -50,8 +50,8 @@ swiper-slide {
 
 .heart {
   position: absolute;
-  right: 40px;
-  top: 110px;
+  // right: 40px;
+  // top: 110px;
   font-size: 28px;
   animation: beat 1s ease infinite;
 }
