--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -25,7 +25,7 @@
       <div class="col col-lg-9 col-xl-7">
         <div class="card">
           <div class="rounded-top text-white d-flex flex-row">
-              <%= cl_image_tag current_user.photo.key, width: 100 ,height: 100, class:"btn2 btn-secondary" %>
+              <%# <%= cl_image_tag current_user.photo.key, width: 100 ,height: 100, class:"btn2 btn-secondary" %>
           </div>
             <%# <div class="ms-4 mt-5 d-flex flex-column" style="width: 150px; justify-content: between;">
             </div> %>
