--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,5 +1,5 @@
   <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
-    <%= image_tag("dashboard-3.jpeg", class: "card-img", style: "margin-top:30px; min-height: 60px ") %>
+    <%= image_tag("dashboard-3.jpg", class: "card-img", style: "margin-top:30px; min-height: 60px ") %>
 
    <p
     style="position: absolute; left: 50%; top: 100px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 24px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px; text-align: center"
