--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,10 +1,8 @@
-  <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
-    <%= image_tag("dashboard-3.jpg", class: "card-img", style: "margin-top:30px; min-height: 60px ") %>
-
-   <p
+<div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
+  <%= image_tag("dashboard-3.jpg", class: "card-img", style: "margin-top:30px; min-height: 60px ") %>
+  <p
     style="position: absolute; left: 50%; top: 100px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 24px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px; text-align: center"
   ><%= @category.title %></p>
-  </div>
 </div>
 <div
   class="container d-flex justify-content-between"
@@ -14,19 +12,19 @@
       type="button"
       class="btn btn-outline-secondary"
       id="amsterdam-btn"
-      style="border-radius: 20px; width: 110px;"
+      style="border-radius: 20px; width: 110px; background-color: darkred; color: white; border-color: darkred"
     >Amsterdam</button></div>
   <div><button
       type="button"
       class="btn btn-outline-secondary"
       id="rotterdam-btn"
-      style="border-radius: 20px; width: 110px;"
+      style="border-radius: 20px; width: 110px; background-color: darkred; color: white; border-color: darkred"
     >Rotterdam</button></div>
   <div><button
       type="button"
       class="btn btn-outline-secondary"
       id="the-hague-btn"
-      style="border-radius: 20px; width: 110px;"
+      style="border-radius: 20px; width: 110px; background-color: darkred; color: white; border-color: darkred"
     >The Hague</button></div>
 </div>
 <hr>
