--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -53,7 +53,7 @@
       <%# <span class="navbar-toggler-icon"></span> %>
     </button>
   </div>
-  <%= image_tag("logo-color.png", alt: "Spark-logo", style: "width:25%;") %>
+  <%= image_tag("logo-color.png", alt: "Spark-logo", style: "width:25%; margin-right: 28px")%>
 
   <div style="margin-right: 20px; margin-top: 5px; margin-bottom: 5px;">
     <a class="navbar-profile-icon"></a>
