--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -18,7 +18,7 @@
 <div class="cover">
 
   <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
-  <%= image_tag("dashboard-6.jpeg", class: "card-img", style: "margin-top:20px; min-height: 215px ") %>
+  <%= image_tag("dashboard-6.jpg", class: "card-img", style: "margin-top:20px; min-height: 215px ") %>
 
     <div>
     <p style="text-align:center; min-width:412px; top:120px;position: absolute;z-index: 1000; font-weight: 600; font-size: 18px; color: black; font-family: 'PT Sans', sans-serif; letter-spacing: 1px; font-style: italic"
