--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -21,10 +21,12 @@
   <%= image_tag("dashboard-6.jpg", class: "card-img", style: "margin-top:20px; min-height: 215px ") %>
 
     <div>
-    <p style="text-align:center; min-width:412px; top:120px;position: absolute;z-index: 1000; font-weight: 600; font-size: 18px; color: black; font-family: 'PT Sans', sans-serif; letter-spacing: 1px; font-style: italic"
-    >spark up your love life</p>
-    <p style="text-align:center; min-width:412px; top:149px;position: absolute;z-index: 1000; font-weight: 400; font-size: 18px; color: black; text-align: center; font-family: 'PT Sans', sans-serif; letter-spacing: 1px"
-        >explore 2,421 curated dating tips</p>
+    <p style="text-align:center; min-width:412px; top:95px;position: absolute;z-index: 1000; font-weight: 400; font-size: 18px; color: #262626; font-family: 'PT Sans', sans-serif; letter-spacing: 3px; font-style: italic"
+    ><strong>Spark</strong> up your love life</p>
+    <p style="text-align:center; min-width:412px; top:135px;position: absolute;z-index: 1000; font-weight: 100; font-size: 14px; color: #262626; text-align: center; font-family: 'PT Sans', sans-serif; letter-spacing: 2px"
+        >explore 2,421 curated dating tips in</p>
+    <p style="text-align:center; min-width:412px; top:160px;position: absolute;z-index: 1000; font-weight: 100; font-size: 14px; color: #262626; text-align: center; font-family: 'PT Sans', sans-serif; letter-spacing: 2px"
+        >three different cities</p>
   </div>
 </div>
 
