--- a/app/views/suggestions/show.html.erb
+++ b/app/views/suggestions/show.html.erb
@@ -63,7 +63,7 @@
         <div class="w-30">
           <h5
             class="card-title"
-            style="padding-top: 18px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px;"
+            style="padding-top: 18px; font-weight: 700; padding-bottom: 5px;"
           ><%= @suggestion.title %></h5>
         </div>
 
@@ -86,7 +86,7 @@
           <% end %>
         </div>
       </div>
-      
+
       <div>
         <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
           <%= @suggestion.city %>
@@ -109,7 +109,7 @@
   <div class="container card mb-3 suggestion-cards" style='overflow: hidden; margin-top:20px;'>
     <div class="suggestion-cards-info">
       <h5 class="card-title"
-              style="padding-top: 18px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
+              style="padding-top: 18px; font-weight: 700; padding-bottom: 5px; "
             >Location</h5>
       <p><span id="address"> </span> </p>
       <div style="min-height:250px; margin-bottom:5px; z-index:0;">
