--- a/app/views/suggestions/index.html.erb
+++ b/app/views/suggestions/index.html.erb
@@ -18,12 +18,13 @@
 <div class="cover">
 
   <div class="card text-white image-container" style="max-height: 190px; object-fit: cover">
-    <%= image_tag("dashboard-6.jpg", class: "card-img", style: "margin-top:60px; min-height: 215px ") %>
-    <p style="position: absolute; left: 50%; top: 40px; transform: translate(-50%); z-index: 1000; font-weight: 400; font-size: 16px; font-style: italic; color: black;"
-    >spark up your love life and explore 2,421 curated dating tips </p>
-    <p
-    style="position: absolute; left: 50%; top: 134px; transform: translate(-50%); z-index: 1000; font-weight: 700; font-size: 35px; color: white; text-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px;"
-  ></p>
+  <%= image_tag("dashboard-6.jpeg", class: "card-img", style: "margin-top:20px; min-height: 215px ") %>
+
+    <div>
+    <p style="text-align:center; min-width:412px; top:120px;position: absolute;z-index: 1000; font-weight: 600; font-size: 18px; color: black; font-family: 'PT Sans', sans-serif; letter-spacing: 1px; font-style: italic"
+    >spark up your love life</p>
+    <p style="text-align:center; min-width:412px; top:149px;position: absolute;z-index: 1000; font-weight: 400; font-size: 18px; color: black; text-align: center; font-family: 'PT Sans', sans-serif; letter-spacing: 1px"
+        >explore 2,421 curated dating tips</p>
   </div>
 </div>
 
