--- a/app/views/suggestions/_list.html.erb
+++ b/app/views/suggestions/_list.html.erb
@@ -11,7 +11,7 @@
         <div class="suggestion-cards-info">
           <h5
               class="card-title"
-              style="padding-top: 15px; font-weight: 700; letter-spacing: 1px; padding-bottom: 5px; "
+              style="padding-top: 15px; font-weight: 700;  padding-bottom: 5px; "
             ><%= suggestion.title %></h5>
           <div>
             <p class="card-text b-5"><i class="fa-solid fa-location-dot"></i>
