--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -5,8 +5,8 @@
 
 
 // Define fonts for body and headers
-// $body-font: "Work Sans", "Helvetica", "sans-serif";
-// $headers-font: "Nunito", "Helvetica", "sans-serif";
+$body-font: "Work Sans", "Helvetica", "sans-serif";
+$headers-font: "Nunito", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
